<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">淘吃客</string>
    <string name="url_service">taochike.sinaapp.com/rest/1/taochike/</string>
    <string name="image_service">taochike-menuimages.stor.sinaapp.com/</string>
    <!-- 开始点菜按钮文字 -->
    <string name="btn_start">选餐桌</string>
    <!-- Tab1标题 -->
    <string name="title_Tab1">首页</string>
    <!-- Tab2标题 -->
    <string name="title_Tab2">订单</string>
    <!-- Tab3标题 -->
    <string name="title_Tab3">服务</string>
    <!-- Tab4标题 -->
    <string name="title_Tab4">结账</string>
    <!-- 消费总计信息 -->
    <string name="infostr_sum">合计：</string>
    <!-- 结账按钮文字 -->
    <string name="btnstr_over">结账</string>
    <!-- 歷史訂單應用按鈕文字 -->   
    <string name="btnstr_use">应用到餐桌</string>
    <!-- 歷史訂單列表标题 -->
    <string name="title_hislist">历史订单</string>
    <!-- 更新按钮文字 -->
    <string name="btnstr_updatenow">现在更新</string>
    <!-- 不更新按钮文字 -->
    <string name="btnstr_updatewait">以后再说</string>
    <!-- 图片描述 -->
    <string name="image_discription">图片</string>
    <string name="ClickTitle">点</string>
    <string name="myappname">淘吃客</string>
    <string name="MapBtnTitle">地图</string>
    <string name="catbtntitle">扫描</string>
    <string name="restaurantsTitle">餐厅列表</string>
    <string name="btnback">返回</string>
    <string name="restaurant_map_title">餐厅地图</string>
    <string name="displaylist">列表</string>
    <string name="captrueTitle">扫描二维码</string>
    <string name="valueSelectDesk">开台</string>
    <string name="btncategories">种类</string>
    <string name="btnok">确定</string>
    <string name="btncancel">取消</string>
    <string name="ischeck">结账吗？</string>
    <string name="give_me_code">请向服务员索要邀请码</string>
    <string name="commit_order">下单</string>
    <string name="commitstr">本次提交</string>
    <string name="searchrecipe">输入菜名</string>
    <string name="search">搜索</string>
    <string name="countnewinfo">例未下单</string>
    <string name="historys">历史订单</string>
    <string name="userset">用户中心</string>
    <string name="hisBrowse">浏览记录</string>
    <string name="currentcity">当前选中的城市</string>
    <string name="citylist">城市列表</string>
    <string name="selectCitystr">选择城市</string>
    <string name="titlecity">选城市</string>
    <string name="myFavorites">我的收藏</string>
    <string name="message_norestaurants">没有符合条件的餐厅！</string>
    <string name="message_net_error">网络连接错误！</string>
    <string name="message_select_city">请选择城市</string>
    <string name="message_locationcityis">定位的城市是</string>
    <string name="message_areyouchange">是否切换？</string>
    <string name="title_location">定位提示</string>
    <string name="message_getcityinfo_fail">获取地理信息失败</string>
    <string name="message_callwaiter">叫服务员先为您开台！</string>
    <string name="strline">----</string>
    <string name="strportion">份</string>
    <string name="strunitprice">"单价：￥ "</string>
    <string name="str_check_totalprice">结账：￥</string>
    <string name="str_yuan">元</string>
    <string name="message_option_fail">操作失败！</string>
    <string name="str_part_over">例已上</string>
    <string name="str_part_nocommit">例未下单</string>
    <string name="str_commited">已下单</string>
    <string name="message_currentcommit">本次提交</string>
    <string name="message_inputcode">请输入餐桌邀请码！</string>
    <string name="message_getrecipesfail">获取菜品失败！</string>
    <string name="mark_yuan">￥</string>
</resources>