<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:gravity="center_vertical|center_horizontal" 
    >   
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="5dip"
	    android:background="@drawable/alertback">
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="10dip"
	        android:paddingTop="20dip">
	        <TextView 
	            android:id="@+id/dialog_title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_alignParentLeft="true"
	            android:textColor="@color/black"
	            android:text="@string/give_me_code"
	            android:textSize="20sp"/>
	        
	    </RelativeLayout>
	    <TextView 
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@drawable/line"
            android:layout_marginTop="5dip"/>
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:paddingTop="15dip"
	        >
	        <EditText android:layout_width="150dip"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:gravity="center"
		        android:inputType="number"
		        android:background="@drawable/inputback"
		        android:id="@+id/inputCode"/>
	    </LinearLayout>
	    <RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dip"
	        android:gravity="bottom|center_horizontal"
	        android:paddingBottom="10dip">
	        <Button 
	            android:id="@+id/dialog_button_cancel"
	            android:layout_alignParentLeft="true"
	            android:layout_width="90dip"
	            android:layout_height="45dip"
	            android:text="@string/btncancel"
	            style="@style/Widget.Button.YesNo"
	            />
	        <Button 
	            android:id="@+id/btnyes"
	            android:layout_width="90dip"
	            android:layout_height="45dip"
	            android:layout_marginLeft="35dip"
	            android:layout_toRightOf="@id/dialog_button_cancel"
	            android:text="@string/btnok"
	            style="@style/Widget.Button.YesNo"
	            />
	    </RelativeLayout>
	</LinearLayout>
</LinearLayout>